crates/parser/src/snapshots/parser__tests__expression_returns_greater_than_or_equal.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
BinaryExpression:
  left:
    IntegerLiteral:
      value: "1"
      location:
        start:
          index: 0
          line: 1
          column: 1
        end:
          index: 1
          line: 1
          column: 2
  operator:
    operator: GreaterThanOrEqual
    location:
      start:
        index: 2
        line: 1
        column: 3
      end:
        index: 4
        line: 1
        column: 5
  right:
    IntegerLiteral:
      value: "2"
      location:
        start:
          index: 5
          line: 1
          column: 6
        end:
          index: 6
          line: 1
          column: 7
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 6
      line: 1
      column: 7
