crates/parser/src/snapshots/parser__tests__expression_returns_if_else_if_expression.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
IfElseExpression:
  condition:
    Identifier:
      name: condition
      location:
        start:
          index: 3
          line: 1
          column: 4
        end:
          index: 12
          line: 1
          column: 13
  then_block:
    statements:
      statements:
        - Expression:
            IntegerLiteral:
              value: "1"
              location:
                start:
                  index: 15
                  line: 1
                  column: 16
                end:
                  index: 16
                  line: 1
                  column: 17
      location:
        start:
          index: 13
          line: 1
          column: 14
        end:
          index: 18
          line: 1
          column: 19
    location:
      start:
        index: 13
        line: 1
        column: 14
      end:
        index: 18
        line: 1
        column: 19
  else_block:
    statements:
      statements:
        - Expression:
            IfElseExpression:
              condition:
                Identifier:
                  name: condition
                  location:
                    start:
                      index: 27
                      line: 1
                      column: 28
                    end:
                      index: 36
                      line: 1
                      column: 37
              then_block:
                statements:
                  statements:
                    - Expression:
                        IntegerLiteral:
                          value: "2"
                          location:
                            start:
                              index: 39
                              line: 1
                              column: 40
                            end:
                              index: 40
                              line: 1
                              column: 41
                  location:
                    start:
                      index: 37
                      line: 1
                      column: 38
                    end:
                      index: 42
                      line: 1
                      column: 43
                location:
                  start:
                    index: 37
                    line: 1
                    column: 38
                  end:
                    index: 42
                    line: 1
                    column: 43
              else_block:
                statements:
                  statements:
                    - Expression:
                        IntegerLiteral:
                          value: "0"
                          location:
                            start:
                              index: 50
                              line: 1
                              column: 51
                            end:
                              index: 51
                              line: 1
                              column: 52
                  location:
                    start:
                      index: 48
                      line: 1
                      column: 49
                    end:
                      index: 53
                      line: 1
                      column: 54
                location:
                  start:
                    index: 48
                    line: 1
                    column: 49
                  end:
                    index: 53
                    line: 1
                    column: 54
              return_type:
                name: I32
                location:
                  start:
                    index: 57
                    line: 1
                    column: 58
                  end:
                    index: 60
                    line: 1
                    column: 61
              location:
                start:
                  index: 24
                  line: 1
                  column: 25
                end:
                  index: 53
                  line: 1
                  column: 54
      location:
        start:
          index: 24
          line: 1
          column: 25
        end:
          index: 53
          line: 1
          column: 54
    location:
      start:
        index: 24
        line: 1
        column: 25
      end:
        index: 53
        line: 1
        column: 54
  return_type:
    name: I32
    location:
      start:
        index: 57
        line: 1
        column: 58
      end:
        index: 60
        line: 1
        column: 61
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 60
      line: 1
      column: 61
