crates/parser/src/snapshots/parser__tests__expression_returns_integer_literal.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
IntegerLiteral:
  value: "234849"
  location:
    start:
      index: 0
      line: 1
      column: 1
    end:
      index: 6
      line: 1
      column: 7
