crates/parser/src/snapshots/parser__tests__parse_bool_literal.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
functions:
  - name:
      name: main
      location:
        start: 3
        end: 7
        context: ~
    parameters:
      parameters: []
      location:
        start: 8
        end: 8
        context: ~
    return_type:
      kind: I32
      location:
        start: 13
        end: 16
        context: ~
    body:
      statements:
        statements:
          - VariableDefinition:
              name:
                name: x
                location:
                  start: 27
                  end: 28
                  context: ~
              mutable: false
              variable_type:
                kind: Bool
                location:
                  start: 30
                  end: 34
                  context: ~
              value:
                BooleanLiteral:
                  value: true
                  location:
                    start: 37
                    end: 41
                    context: ~
              location:
                start: 23
                end: 42
                context: ~
          - VariableDefinition:
              name:
                name: y
                location:
                  start: 51
                  end: 52
                  context: ~
              mutable: false
              variable_type:
                kind: Bool
                location:
                  start: 54
                  end: 58
                  context: ~
              value:
                BooleanLiteral:
                  value: false
                  location:
                    start: 61
                    end: 66
                    context: ~
              location:
                start: 47
                end: 67
                context: ~
          - Expression:
              IntegerLiteral:
                value: "0"
                location:
                  start: 72
                  end: 73
                  context: ~
        location:
          start: 23
          end: 73
          context: ~
      location:
        start: 23
        end: 73
        context: ~
    location:
      start: 0
      end: 75
      context: ~
