crates/parser/src/snapshots/parser__tests__parse_returns_function_definition_without_parameters.snap
---
source: crates/parser/src/lib.rs
expression: ast
---
functions:
  - name:
      name: main
      location:
        start: 3
        end: 7
        context: ~
    parameters:
      parameters: []
      location:
        start: 8
        end: 8
        context: ~
    return_type:
      name: I32
      location:
        start: 13
        end: 16
        context: ~
    body:
      statements:
        statements:
          - Expression:
              IntegerLiteral:
                value: "0"
                location:
                  start: 19
                  end: 20
                  context: ~
        location:
          start: 19
          end: 20
          context: ~
      location:
        start: 19
        end: 20
        context: ~
    location:
      start: 0
      end: 22
      context: ~
